// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should fail to parse non-numbers 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received a string",
    "path": [],
    "received": "string",
  },
]
`;

exports[`should not parse -Infinity 1`] = `
[
  {
    "code": "is_infinite",
    "message": "Expected a finite number, received -Infinity",
    "path": [],
  },
]
`;

exports[`should not parse Infinity 1`] = `
[
  {
    "code": "is_infinite",
    "message": "Expected a finite number, received Infinity",
    "path": [],
  },
]
`;

exports[`should not parse a NaN 1`] = `
[
  {
    "code": "is_nan",
    "message": "Expected a number, received NaN",
    "path": [],
  },
]
`;
